--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ psycopg2-binary==2.9.7
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.16.1
+python-dotenv==1.0.0
 requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.20
